--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^4.0.4",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   },
   "name": "bleachers",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
