--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^4.0.4",
+    "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
+    "sequelize": "^6.31.1",
     "socket.io": "^4.6.1"
   },
   "name": "bleachers",
