--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.0-alpha3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^4.0.4",
